[tool.poetry]
name = "repl_python3_PyraBot"
version = "0.1.0"
description = ""
authors = ["ML10wastaken <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
googletrans = "^3.0.0"
qrcode = "^6.1"
youtube-dl = "^2021.4.17"
aioconsole = "^0.3.1"
async-timeout = "^3.0.1"
bs4 = "^0.0.1"
discord = "^1.0.1"
flask = "^1.1.2"
discord-pretty-help = "^1.3.0"
requests = "^2.25.1"
jishaku = "^1.20.0"
PyNaCl = "^1.4.0"
aiohttp-requests = "^0.1.3"
discord-ext-levenshtein = "^0.3.0"
Pillow = "^8.2.0"
owotext = "^1.1.1"
SimpleEconomy = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
